src/test/deca/syntax/valid/main_vide.deca
// Description:
//    main vide
//
// Resultats:
//    ok

{}