src/test/deca/syntax/invalid/crochet_manquant_1.deca
// Description:
//    crochet ouvrant manquant dans le main
//
// Resultats:
//    Erreur de syntaxe
//    ligne 8 : missing '}' 

{